erDiagram
    USERS ||--o{ BOOKINGS : makes
    GUIDES ||--o{ BOOKINGS : receives
    BOOKINGS }o--|| ZONES : in
    BOOKINGS }o--|| TOURIST_PLACES : at

    GUIDES ||--o{ GUIDE_ZONES : works_in
    ZONES ||--o{ GUIDE_ZONES : has

    GUIDES ||--o{ GUIDE_TOURIST_PLACES : recommends
    TOURIST_PLACES ||--o{ GUIDE_TOURIST_PLACES : recommended_by

    GUIDES ||--o{ GUIDE_SPECIALTIES : has
    SPECIALTIES ||--o{ GUIDE_SPECIALTIES : used_by

    GUIDES ||--o{ GUIDE_LANGUAGES : speaks
    LANGUAGES ||--o{ GUIDE_LANGUAGES : spoken_by

    USERS ||--o{ FAVORITE_ZONES : favorites
    ZONES ||--o{ FAVORITE_ZONES : favored_by

    USERS ||--o{ FAVORITE_TOURIST_PLACES : favorites
    TOURIST_PLACES ||--o{ FAVORITE_TOURIST_PLACES : favored_by

    COUNTRIES ||--o{ ZONES : contains
    CONTINENTS ||--o{ COUNTRIES : contains

    BOOKINGS ||--o{ PAYMENTS : charged_by
    GUIDES ||--o{ NOTIFICATIONS : notifies
    ZONES ||--o{ WEATHER_ALERTS : has
